@@ -2,114 +2,130 @@
 
 <h2>Music language input.</h2>
 <p>
- The  input is done in the form of a textual music language.
- 
-  <ul>
-   <li> Entry may be done with the text editor of your choice, and using
+  The  input is done in the form of a textual music language.
+</p>
+
+<ul>
+  <li>
+    Entry may be done with the text editor of your choice, and using
     the national language of your choice.
-
-<li>The ASCII input language can integrate with TeX, HTML and Texinfo,
-thus allowing musicological treatises to be written from a single
-source.  
-
-<li> The music and its layout are strictly separated, so score and
-parts (possibly in different styles and keys) and scores can be
-generated from the same source, and changes always take effect in both
-places
-
-<li>The output can be improved by upgrading the program.
- 
-<li>Pieces can be printed in different (typographical) house styles,
-or according to different notational conventions.
-   
+  </li>
+  <li>
+    The ASCII input language can integrate with TeX, HTML and Texinfo,
+    thus allowing musicological treatises to be written from a single
+    source.
+  </li>
+  <li>
+    The music and its layout are strictly separated, so score and
+    parts (possibly in different styles and keys) and scores can be
+    generated from the same source, and changes always take effect in both
+    places.
+  </li>
+  <li>
+    The output can be improved by upgrading the program.
+  </li>
+  <li>
+    Pieces can be printed in different (typographical) house styles,
+    or according to different notational conventions.
+  </li>
 </ul>
 
 <h2>Automated high-quality formatting.</h2>
 
 <ul>
- <li> Automatic  spacing, line breaking and page breaking
-
- <li>
-Handling of polyphonic collisions for notes, dots, and  rests 
-
-<li> Automatic placement of accidentals, beams, slurs. 
-
   <li>
-   Users don't need  typographical expertise to produce good notation.
-   
-  <li>No user interaction necessary during running, Running the
-   program can be automated, which is convenient for mass converting
-   databases of digitized music, and printing algorithmic
-   compositions.
-  
-<li>
- The Feta font has been tailored especially for LilyPond, and was
- designed carefully mimicking the finest hand-engraved scores.
- It is available as a scalable font, but also as a Metafont.
-    
-<li> Support for many notation constructs.
+    Automatic spacing, line breaking and page breaking.
+  </li>
+  <li>
+    Handling of polyphonic collisions for notes, dots, and rests.
+  </li>
+  <li>
+    Automatic placement of accidentals, beams, slurs. 
+  </li>
+  <li>
+    Users don't need typographical expertise to produce good notation.
+  </li>
+  <li>
+    No user interaction necessary during running, Running the
+    program can be automated, which is convenient for mass converting
+    databases of digitized music, and printing algorithmic
+    compositions.
+  </li>
+  <li>
+    The Feta font has been tailored especially for LilyPond, and was
+    designed carefully mimicking the finest hand-engraved scores.
+    It is available as a scalable font, but also as a Metafont.
+  </li>
+  <li>
+    Support for many notation constructs.
+  </li>
 </ul>
 
 <h2>Special notation</h2>  
 <ul>
-<!-- todo: add links-->
-<li>Chord names.
-<li>Drum notation.
-<li>Figured bass.
-<li>Grace notes.
-<li>Fret diagrams
-<li>Basic tablature notation.
-<li>Cluster notation and rhythmic  grouping signs.
-<li>Tremolos, both for single notes and chords.
-<li>Tuplets in arbitrary ratios
-<li>Polymetric notation
-<li>Mensural notation
-<li>Automatic cue-notes,
-<li>Automatic part combining for orchestral scores
-<li>Quarter tone accidentals
-<li>Ambituses
-<li>Metronome markings
-<li>Harmonics
-<li>Measure repeats (&ldquo;Percent style&rdquo;)
-<li>EasyNotation note heads
-<li>Blanking arbitrary notation elements
-<li>Arpeggio signs
-<li>Ottava brackets
-<li>Nested analysis brackets
-<li>Piano pedals
+  <!-- todo: add links-->
+  <li>Chord names.</li>
+  <li>Drum notation.</li>
+  <li>Figured bass.</li>
+  <li>Grace notes.</li>
+  <li>Fret diagrams.</li>
+  <li>Basic tablature notation.</li>
+  <li>Cluster notation and rhythmic  grouping signs.</li>
+  <li>Tremolos, both for single notes and chords.</li>
+  <li>Tuplets in arbitrary ratios.</li>
+  <li>Polymetric notation.</li>
+  <li>Mensural notation.</li>
+  <li>Automatic cue-notes,.</li>
+  <li>Automatic part combining for orchestral scores.</li>
+  <li>Quarter tone accidentals.</li>
+  <li>Ambituses.</li>
+  <li>Metronome markings.</li>
+  <li>Harmonics.</li>
+  <li>Measure repeats (&ldquo;Percent style&rdquo;).</li>
+  <li>EasyNotation note heads.</li>
+  <li>Blanking arbitrary notation elements.</li>
+  <li>Arpeggio signs.</li>
+  <li>Ottava brackets.</li>
+  <li>Nested analysis brackets.</li>
+  <li>Piano pedals.</li>
 </ul>
 
 
 <h2> Robust design</h2>
 
 <ul>
-<li> Lyrics in any language (eg. <a
-href="http://lists.gnu.org/archive/html/lilypond-devel/2004-07/msg00071.html">Chinese
-lyrics</a>)
-<li> Output in PostScript, PDF, PNG, MIDI and TeX.
-<li> No limits on the number of staves, voices, measures, lengths of
- texts, etc.
-<li> Extensible with built-in LISP interpreter.
+  <li>
+    Lyrics in any language (eg. <a
+				   href="http://lists.gnu.org/archive/html/lilypond-devel/2004-07/msg00071.html">Chinese
+      lyrics</a>).
+  </li>
+  <li>
+    Output in PostScript, PDF, PNG, MIDI and TeX.
+  </li>
+
+  <li>
+    No limits on the number of staves, voices, measures, lengths of
+    texts, etc.
+  </li>
+  <li>
+    Extensible with built-in LISP interpreter.
+  </li>
 </ul>
 
 <h2>Excellent support</h2>
 <ul>
-<li>Runs on Unix.
-<li>Active user community
-<li>Extensive documentation.
-<li>Supported by many other programs,
-<a href="www.rosegardenmusic.com">RoseGarden</a> 
-<a href="http://noteedit.berlios.de/">NoteEdit</a> and
-<a href="http://jelmer.vernstok.nl/oss/ptabtool">PowerTab</a>
- and
-<a href="http://denemo.sourceforge.net/">Denemo</a>.
-
-<li> Imports <a href="http://abc.sourceforge.net/">ABC</a>, <a
-href="http://www.finalemusic.com/finale/">ETF</a> and MIDI.
-
+  <li>Runs on Unix.</li>
+  <li>Active user community.</li>
+  <li>Extensive documentation.</li>
+  <li>Supported by many other programs,</li>
+  <a href="http://www.rosegardenmusic.com">RoseGarden</a> 
+  <a href="http://noteedit.berlios.de/">NoteEdit</a> and
+  <a href="http://jelmer.vernstok.nl/oss/ptabtool">PowerTab</a>
+  and
+  <a href="http://denemo.sourceforge.net/">Denemo</a>.
+</li>
+<li>
+  Imports <a href="http://abc.sourceforge.net/">ABC</a>,
+  <a href="http://www.finalemusic.com/finale/">ETF</a> and MIDI.
+</li>
 </ul>
-
-
-
-
-
