@@ -1,3 +1,8 @@
+2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/about/features.html: Fix rosegarden link.  Add close tags,
+	indent-region.
+
 2005-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/download/windows.html: Reword Windows problem a bit after
